Your commit message here

--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -1,4 +1,41 @@
-<head>
+<style>
+    .custom-carousel img {
+        width: 100%;
+        height: 700px;
+        position: relative;
+       
+    }
+      
+</style>
+<div class="page-header clear-filter" style="background-color: rgba(203, 37, 37, 0.76);">
+    <div class="page-header clear-filter">
+        <div class="page-header-image rellax-header" data-rellax-speed="-7" style="background-image: url('assets/img/bg_img.jpeg');"></div>
+      <div class="container text-center">
+        <img class="n-logo" src="" alt="">
+        <h1 class="display-3 font-weight-bold">NACHO</h1>
+        <h3>Welcome to the Movie Experience</h3>
+      </div>
+    </div>
+  
+    <div class="container">
+      <ngb-carousel class="custom-carousel">
+        <ng-template ngbSlide *ngFor="let movie of movies">
+          <div class="d-block">
+            <img class="d-block img-fluid" [src]="movie.imageUrl" alt="{{ movie.title }}">
+            <div class="carousel-caption d-none d-md-block text-warning">
+              <h5 class="display-4"><b>{{ movie.title }}</b></h5>
+              <p class="lead">{{ movie.description }}</p>
+              <div>
+                <a [href]="movie.buttonLink" class="btn btn-primary">{{ movie.buttonText }}</a>
+                <a href="#" class="btn btn-secondary">Learn More</a>
+              </div>
+            </div>
+          </div>
+        </ng-template>
+      </ngb-carousel>
+    </div>
+  </div>
+  <!--<head>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <style>
@@ -69,6 +106,8 @@
             </ng-template>
           </ngb-carousel>
         </div>
-      </div>
+      </div>-->
+
+
       
  
