--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -21,7 +21,7 @@
               </li>
                 
                 <li class="nav-item">
-                    <a class="nav-link btn btn-neutral" href="https://www.creative-tim.com/product/now-ui-kit-pro-angular" target="_blank">
+                    <a class="nav-link btn btn-neutral" href="" target="_blank">
                         <i class="now-ui-icons arrows-1_share-66"></i>
                         <p>Upgrade to Premium</p>
                     </a>
